--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,21 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly("org.projectlombok:lombok:1.18.30")
+
     annotationProcessor("org.projectlombok:lombok:1.18.30")
+
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.9.Final'
+
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
+
+    annotationProcessor("com.fasterxml.jackson.core:jackson-databind:2.15.2")
+
+    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.7.0'
+
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
+
 
 
 }
