--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
 
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
 
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
+
+
 
 
 }
